api/UserService/user-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    role: user-service
spec:
  selector: 
    app: user-service
  ports:
    - protocol: TCP
      port: 8001
  type: LoadBalancer
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-service
  labels:
    role: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: srebrovn/user-service:v1.1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
